# grocery-agent

./: .gitignore  .mcp.json  .mcp.json.example  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
config/: .env.example  graphql-hashes.json  lists.yaml  policy.yaml  store.json  store.json.example
data/: approvals.json  preferences.json  preferences.json.example  staples.json  staples.json.example
deploy/launchd/: com.grocery-agent.favor-session-sync.plist  com.grocery-agent.heartbeat.plist  com.grocery-agent.parked-chrome.plist  com.grocery-agent.parked-favor-chrome.plist  com.grocery-agent.server.plist  com.grocery-agent.session-sync.plist  com.grocery-agent.web.plist  com.maurice.grocery-heartbeat.plist  com.maurice.heb-checkout.plist
docs/: INTEGRATION.md  SESSION-AND-HASHES.md  SHARING.md  TROUBLESHOOTING.md  WEB-UI.md
prompts/: system-prompt.md
scripts/: add_card.py  capture_real_session.py  e2e_test.py  enable_phone_testing.sh  ensure_session.py  favor_persistent_login.py  heartbeat.sh  install.sh  keepalive.py  lock_down.sh  manual_login.py  refresh_graphql_hashes.py  restore.sh  save_heb_login.py  selftest.py  setup_tailscale_funnel.sh  shop-server  shop_server.py  snapshot.sh  start_parked_chrome.sh  start_parked_favor_chrome.sh  sync_parked_favor_session.py  sync_parked_session.py
src/favor_checkout/: __init__.py  favor.py  server.py
src/grocery_web/: __init__.py  agent.py  app.py  config.py
src/grocery_web/static/: index.html  manifest.webmanifest
src/heb_checkout/: __init__.py  approvals.py  audit.py  auth.py  browser.py  calendar_events.py  cards.py  checkout_driver.py  config.py  gateway.py  lists.py  locking.py  policy.py  preferences.py  replenishment.py  server.py  updates.py  wallet.py
