[project]
name = "heb-checkout"
version = "0.1.0"
description = "MCP server that takes an HEB cart through checkout under policy control"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "playwright>=1.40",
    "pyyaml>=6.0",
    # Pinned exactly: third-party code that runs with the HEB session. Upgrade
    # deliberately — review the release diff, bump the pin, re-run make selftest.
    "texas-grocery-mcp[browser]==0.1.3",
]

[project.scripts]
heb-checkout = "heb_checkout.server:main"
grocery-gateway = "heb_checkout.gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heb_checkout"]
