[project]
name = "heb-checkout"
version = "0.1.0"
description = "MCP server that takes an HEB cart through checkout under policy control"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "playwright>=1.40",
    "pyyaml>=6.0",
    # Pinned exactly: third-party code that runs with the HEB session. Upgrade
    # deliberately — review the release diff, bump the pin, re-run make selftest.
    "texas-grocery-mcp[browser]==0.1.3",
    # Local web UI brain (the Claude tool-use agent loop). Starlette/uvicorn/sse-starlette
    # already ship with fastmcp, so this is the only new dependency for `make web`.
    "anthropic==0.109.1",
]

[project.scripts]
heb-checkout = "heb_checkout.server:main"
grocery-gateway = "heb_checkout.gateway:main"
grocery-web = "grocery_web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heb_checkout", "src/favor_checkout", "src/grocery_web"]
# static/ ships automatically as package data under src/grocery_web — no force-include
# (a force-include of the same files makes the wheel build fail on duplicate paths).
